--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
                 <h1>Drexel's Recipes</h1>
             </a>
             <div class="search-box">
-                <form action="filter.html">
+                <form action="docs/filter.html">
                     <input type="text" placeholder="Search for recipes..." name="search">
                 </form>
             </div>
-            <a href="filter.html">
+            <a href="docs/filter.html">
                 <img src="../media/search-icon.svg" class="icon" alt="">
             </a>
         </div>
@@ -27,7 +27,7 @@
     <div class="recipe-of-day">
         <img src="../media/spicy-pork-korean-style-high-res.jpg" alt="Spicy Pork & Korean Rice Cakes">
         <article>
-            <a href="recipe.html">
+            <a href="docs/recipe.html">
                 <h2>Recipe of the day</h2>
                 <h1>Spicy Pork & Korean Rice Cakes</h1>
                 <h3>with Bok Choy</h3>
