--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/index.css">
     <title>Drexel's Recipes</title>
 </head>
 <body>
@@ -19,13 +19,13 @@
                 </form>
             </div>
             <a href="docs/filter.html">
-                <img src="../media/search-icon.svg" class="icon" alt="">
+                <img src="media/search-icon.svg" class="icon" alt="">
             </a>
         </div>
         <hr>
     </header>
     <div class="recipe-of-day">
-        <img src="../media/spicy-pork-korean-style-high-res.jpg" alt="Spicy Pork & Korean Rice Cakes">
+        <img src="media/spicy-pork-korean-style-high-res.jpg" alt="Spicy Pork & Korean Rice Cakes">
         <article>
             <a href="docs/recipe.html">
                 <h2>Recipe of the day</h2>
